--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2273,7 +2273,7 @@ Year={2016}
 	number = {JEP122H},
 }
 
-@article{kim:CAL'15,
+@article{Kim:CAL'15,
   title={A performance-energy model to evaluate single thread execution acceleration},
   author={Seung Hun Kim and Dohoon Kim and Changmin Lee and Won Seob Jeong and Won Woo Ro and Jean-Luc Gaudiot},
   journal={IEEE Computer Architecture Letters},
@@ -2284,7 +2284,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{woo:Computer'08,
+@article{Woo:Computer'08,
   title={Extending Amdahl's law for energy-efficient computing in the many-core era},
   author={Dong Hyuk Woo and Hsien-Hsin S. Lee},
   journal={Computer},
@@ -2294,7 +2294,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{karanikolaou:JS'14,
+@article{Karanikolaou:JS'14,
   title={Performance scalability and energy consumption on distributed and many-core platforms},
   author={EM Karanikolaou and EI  Milovanovi{\'c} and I{\v{Z}} Milovanovi{\'c} and MP Bekakos},
   journal={The Journal of Supercomputing},
@@ -2305,7 +2305,7 @@ Year={2016}
   publisher={Springer}
 }
 
-@inproceedings{ge:PDPS'07,
+@inproceedings{Ge:PDPS'07,
   title={Power-aware speedup},
   author={Rong Ge and Kirk W Cameron},
   booktitle={Parallel and Distributed Processing Symposium, 2007. IPDPS 2007. IEEE International},
@@ -2314,7 +2314,7 @@ Year={2016}
   organization={IEEE}
 }
 
-@inproceedings{sawalha:GTC'12,
+@inproceedings{Sawalha:GTC'12,
   title={Energy-efficient phase-aware scheduling for heterogeneous multicore processors},
   author={Lina Sawalha and Ronald D Barnes},
   booktitle={Green Technologies Conference, 2012 IEEE},
@@ -2323,7 +2323,7 @@ Year={2016}
   organization={IEEE}
 }
 
-@inproceedings{lukefahr:ICPAC'14,
+@inproceedings{Lukefahr:ICPAC'14,
   title={Heterogeneous microarchitectures trump voltage scaling for low-power cores},
   author={Andrew Lukefahr and Shruti Padmanabha and Reetuparna Das and Ronald Dreslinski Jr and Thomas F Wenisch and Scott Mahlke},
   booktitle={Proceedings of the 23rd international conference on Parallel architectures and compilation},
@@ -2332,7 +2332,7 @@ Year={2016}
   organization={ACM}
 }
 
-@inproceedings{wang:ISPA'10,
+@inproceedings{Wang:ISPA'10,
   title={Power-efficient work distribution method for CPU-GPU heterogeneous system},
   author={Guibin Wang and Xiaoguang Ren},
   booktitle={Parallel and Distributed Processing with Applications (ISPA), 2010 International Symposium on},
@@ -2341,7 +2341,7 @@ Year={2016}
   organization={IEEE}
 }
 
-@article{che:JPDC'14,
+@article{Che:JPDC'14,
   title={Amdahl’s law for multithreaded multicore processors},
   author={Hao Che and Minh Nguyen},
   journal={Journal of Parallel and Distributed Computing},
@@ -2352,7 +2352,7 @@ Year={2016}
   publisher={Elsevier}
 }
 
-@article{cho:CAL'08,
+@article{Cho:CAL'08,
   title={Corollaries to Amdahl's law for energy},
   author={Sangyeun Cho and Rami Melhem},
   journal={IEEE Computer Architecture Letters},
@@ -2363,7 +2363,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{sun:JPDC'10,
+@article{Sun:JPDC'10,
   title={Reevaluating Amdahl’s law in the multicore era},
   author={Xian-He Sun and Yong Chen},
   journal={Journal of Parallel and Distributed Computing},
@@ -2374,7 +2374,7 @@ Year={2016}
   publisher={Elsevier}
 }
 
-@article{hill:Computer'08,
+@article{Hill:Computer'08,
   title={Amdahl's law in the multicore era},
   author={Mark D Hill and Michael R Marty},
   journal={Computer},
@@ -2384,7 +2384,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{xian:tcad'08,
+@article{Xian:tcad'08,
   title={Dynamic voltage scaling for multitasking real-time systems with uncertain execution time},
   author={Changjiu Xian and Yung-Hsiang Lu and Zhiyuan Li},
   journal=tcad,
@@ -2395,7 +2395,7 @@ Year={2016}
   publisher={IEEE}
 }
 
-@inproceedings{gandhi:ASPER'09,
+@inproceedings{Gandhi:ASPER'09,
   title={Optimal power allocation in server farms},
   author={Anshul Gandhi and Mor Harchol-Balter and Rajarshi Das and Charles Lefurgy},
   booktitle={ACM SIGMETRICS Performance Evaluation Review},
@@ -2406,7 +2406,7 @@ Year={2016}
   organization={ACM}
 }
 
-@inproceedings{kong:DATE'11,
+@inproceedings{Kong:DATE'11,
   title={Energy-efficient scheduling of real-time tasks on cluster-based multicores},
   author={Fanxin Kong and Wang Yi and Qingxu Deng},
   booktitle=date,
@@ -2415,7 +2415,7 @@ Year={2016}
   organization={IEEE}
 }
 
-@inproceedings{wang:ICC'10,
+@inproceedings{Wang:ICC'10,
   title={Towards energy aware scheduling for precedence constrained parallel tasks in a cluster with DVFS},
   author={Lizhe Wang and Gregor Von Laszewski and Jay Dayal and Fugang Wang},
   booktitle={Proceedings of the 2010 10th IEEE/ACM International Conference on Cluster, Cloud and Grid Computing},
@@ -2424,7 +2424,7 @@ Year={2016}
   organization={IEEE Computer Society}
 }
 
-@article{wang:access'17,
+@article{Wang:access'17,
   title={A dvfs based energy-efficient tasks scheduling in a data center},
   author={Songyun Wang and Zhuzhong Qian and Jiabin Yuan and Ilsun You},
   journal={IEEE Access},
@@ -2442,7 +2442,7 @@ Year={2016}
   year={2014},
 }
 
-@inproceedings{borkar:dac'07,
+@inproceedings{Borkar:dac'07,
   title={Thousand core chips: a technology perspective},
   author={Shekhar Borkar},
   booktitle=dac,
