add codes(appeared 3 times) to variable

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -43,6 +43,7 @@
 @string{socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
 @string{icsict="Proc. International Conference on Solid-State and Integrated Circuit Technology (ICSICT)"}
 @string{cdc="Proc. IEEE Conference on Decision and Control (CDC)"}
+@string{codes="Proc. International conference on Hardware/software codesign and system synthesis"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -573,7 +574,7 @@ month ={June.},
 @inproceedings{Pagani:CODES'14,
   title={{TSP}: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
   author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, J\"{o}rg},
-  booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
+  booktitle=codes,
   year={2014}
 }
 
@@ -598,7 +599,7 @@ month ={June.},
 @inproceedings{Shafique:CODES'14,
   title={Dark silicon as a challenge for hardware/software co-design},
   author={Muhammad Shafique and Siddharth Garg and Tulika Mitra and Sri Parameswaran and J\"{o}rg Henkel},
-  booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
+  booktitle=codes,
   year={2014}
 }
 
@@ -645,7 +646,7 @@ month ={June.},
 @inproceedings{Xiong:TENCON'05,
   title={Two-phases Parallel Neural Network Algorithm Based on {RPROP}},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
-  booktitle={Proc. IEEE TENCON},
+  booktitle={Proc. IEEE Region Ten Conference},
   year={2005},
   month={November},
   pages={1--6},
@@ -2530,7 +2531,7 @@ Year={1987}
 @inproceedings{Xiang:CODES'10,
 	title={System-level reliability modeling for {MPSoCs}},
 	author={Yun Xiang and Thidapat Chantem and Robert P. Dick and X. Sharon Hu and Li Shang},
-	booktitle={Proc. International conference on Hardware/software codesign and system synthesis},
+	booktitle=codes,
 	pages={297--306},
 	year={2010},
 	month={October},
