--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1795,10 +1795,8 @@ Year={2016}
 	author={Jayanth Srinivasan and Sarita V. Adve and Pradip Bose and Jude A. Rivers},
 	booktitle=isca,
 	year={2004},
-	month={june},
-	volume={32},
-	number={2},
-	pages={276},
+	month={June},
+	pages={276--287},
 	location={München, Germany},
 }
 
