--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -9,7 +9,6 @@
 @string{iscas = "Proc. IEEE Int. Symp. on Circuits and Systems (ISCAS)"}
 @string{islped = "Proc. Int. Symp. on Low Power Electronics and Design (ISLPED)"}
 @string{iedm = "IEEE International Electron Devices Meeting (IEDM)"}
-@string{glvlsi = "Proc. IEEE/ACM International Great Lakes Symposium on VLSI"}
 @string{mcmc = "Proc. IEEE Multi-Chip Module Conf."}
 @string{icvlsi = "International Conference on VLSI Design"}
 @string{isca = "Proc. Int. Symp. on Computer Architecture (ISCA)"}
@@ -32,7 +31,7 @@
 @string{tsp= "IEEE Trans. on Signal Processing"}
 @string{glsvlsi = "Proc. IEEE/ACM International Great Lakes Symposium on VLSI (GLSVLSI)"}
 @string{ieeeproc = "Proc. of the IEEE"}
-@string{acc = "Proc. American Control Conference"}
+@string{acc = "Proc. American Control Conference (ACC)"}
 @string{asplos = "Proc. of International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS) "}
 @string{isqed = "Proc. Int. Symposium. on Quality Electronic Design (ISQED)"}
 @string{hpca = "Proc. IEEE Int. Symp. on High-Performance Computer Architecture (HPCA)"}
@@ -43,7 +42,7 @@
 @string{socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
 @string{icsict="Proc. International Conference on Solid-State and Integrated Circuit Technology (ICSICT)"}
 @string{cdc="Proc. IEEE Conference on Decision and Control (CDC)"}
-@string{codes="Proc. International conference on Hardware/software codesign and system synthesis"}
+@string{codes="Proc. International conference on Hardware/software codesign and system synthesis (CODES+ISSS)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -1998,10 +1997,10 @@ Year={2016}
 	location = {Burlingame, CA},
 }
 
-@inproceedings{Puttaswamy:GLVLSI'06,
+@inproceedings{Puttaswamy:GLSVLSI'06,
 	title={Thermal analysis of a {3D} die-stacked high-performance microprocessor},
 	author={Kiran Puttaswamy and Gabriel H Loh},
-	booktitle=glvlsi,
+	booktitle=glsvlsi,
 	pages={19--24},
 	year={2006},
 	month={April},
