--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -43,6 +43,7 @@
 @string{icsict="Proc. International Conference on Solid-State and Integrated Circuit Technology (ICSICT)"}
 @string{cdc="Proc. IEEE Conference on Decision and Control (CDC)"}
 @string{codes="Proc. International conference on Hardware/software codesign and system synthesis (CODES+ISSS)"}
+@string{micro="IEEE MICRO"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -218,7 +219,7 @@ month ={Nov.},
 @Article{Brooks:MICRO'07,
   author =       {David Brooks and Robert Dick and Russ Joseph and Li Shang},
   title =        {Power, Thermal, and Reliability Modeling in Nanometer-Scale Microprocessors},
-  journal =      {IEEE Micro},
+  journal =     micro,
   year =         {2007},
   pages =    {49--62},
   volume = {27},
@@ -672,7 +673,7 @@ month ={June.},
 @article{Esmaeilzadeh:MICRO'12,
   author={Hadi Esmaeilzadeh and Emily Blem and Renee St. Amant and Karthikeyan Sankaralingam and Doug Burger},
   title={Dark silicon and the end of multicore scaling},
-  journal =  {IEEE Micro},
+  journal =  micro,
   year={2012},
   volume = {32},
   number = {3},
@@ -683,7 +684,7 @@ month ={June.},
 @article{Taylor:MICRO'13,
   author={Michael Taylor},
   title={A Landscape of the New Dark Silicon Design Regime},
-  journal =  {IEEE Micro},
+  journal =  micro,
   year={2013},
   volume = {33},
   number = {5},
@@ -959,7 +960,7 @@ month = apr
 @Article{Hardavellas:MICRO'11,
   author =       {Nikos Hardavellas and Michael Ferdman and Babak Falsafi and Anastasia Ailamaki},
   title =        {Toward Dark Silicon in Servers},
-  journal =      {IEEE Micro},
+  journal =      micro,
   year =         {2011},
   pages =    {6--15},
   volume = {31},
@@ -978,7 +979,7 @@ month = apr
 @Article{Huang:MICRO'11,
   author =       {Wei Huang and Karthick Rajamani and Mircea Stan and Kevin Skadron},
   title =        {Scaling with Design Constraints: Predicting the Future of Big Chips},
-  journal =      {IEEE Micro},
+  journal =      micro,
   year =         {2011},
   pages =    {16--29},
   volume = {31},
@@ -1126,7 +1127,7 @@ Year = {2010},
 @Article{Goulding-Hotta:MICRO'11,
   author =       {Nathan Goulding-Hotta and Jack Sampson and Ganesh Venkatesh and Saturnino Garcia and Joe Auricchio and Po-Chao Huang and Manish Arora and Siddhartha Nath and Vikram Bhatt and Jonathan Babb and Steven Swanson and Michael Taylor},
   title =        {The {GreenDroid} Mobile Application Processor: An Architecture for Silicon's Dark Future},
-  journal =      {IEEE Micro},
+  journal =      micro,
   year =         {2011},
   pages =    {86--95},
   volume = {31},
@@ -1497,12 +1498,12 @@ year={2008},
 @Article{Rotem:MICRO'12,
   author =       {Efraim Rotem and Alon Naveh and Doron Rajwan and Avinash Ananthakrishnan and Eliezer Weissmann},
   title =        {Power-management architecture of the intel microarchitecture code-named sandy bridge},
-  journal =      {IEEE Micro},
+  journal =      micro,
   year =         {2012},
   pages =    {20--27},
   volume = {32},
   number = {2},
-  month = {March},
+  month = {March--April},
 }
 
 @inproceedings{Codecasa:ITHERM'06,
@@ -1812,7 +1813,7 @@ Year={2016}
 @article{Lu:MICRO'05,
 	title={Improved thermal management with reliability banking},
 	author={Zhijian Lu and John Lach and Mircea R. Stan and Kevin Skadron},
-	journal={IEEE Micro},
+	journal=micro,
 	volume={25},
 	number={6},
 	pages={40--49},
@@ -2601,12 +2602,12 @@ Year={1987}
 @Article{Skadron:MICRO'03,
   author =       {Kevin Skadron and Mircea R. Stan and Wei Huang and Sivakumar Velusamy and Karthik Sankaranarayanan and David Tarjan},
   title =        {Temperature-aware computer systems: opportunities and challenges},
-  journal =      {IEEE Micro},
+  journal =      micro,
   year =         {2003},
   pages =    {52--61},
   volume = {23},
   number = {6},
-  month = {November-December},
+  month = {November--December},
 }
 
 @inproceedings{Yeo:DAC'08,
@@ -2617,3 +2618,14 @@ Year={1987}
  pages = {734--739},
  location = {Anaheim, CA},
  }
+
+@Article{Shang:MICRO'06,
+  author =       {Li Shang and Li-Shiuan Peh and Amit Kumar and Niraj K. Jha},
+  title =        {Temperature-aware on-chip networks},
+  journal =      micro,
+  year =         {2006},
+  pages =    {130--139},
+  volume = {26},
+  number = {1},
+  month = {January--Feburary},
+}
