--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2629,3 +2629,13 @@ Year={1987}
   number = {1},
   month = {January--Feburary},
 }
+
+@inproceedings{Coskun:DATE'07,
+	title={Temperature Aware Task Scheduling in {MPSoCs}},
+	author={Ayse K Coskun and Tajana Simunic Rosing and Keith Whisnant},
+	booktitle=date,
+	pages={1659--1664},
+	year={2007},
+	month = {April},
+	location = {Nice, France},
+}
