--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2639,3 +2639,13 @@ Year={1987}
 	month = {April},
 	location = {Nice, France},
 }
+
+@inproceedings{Khan:DATE'09,
+	title={Hardware/Software Co-design Architecture for Thermal Management of Chip Multiprocessors},
+	author={Omer Khan and Sandip Kundu},
+	booktitle=date,
+	pages={952--957},
+	year={2009},
+	month = {April},
+	location = {Nice, France},
+}
