--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2649,3 +2649,21 @@ Year={1987}
 	month = {April},
 	location = {Nice, France},
 }
+
+@inproceedings{Clabes:DAC'04,
+ author = {Joachim Clabes and Joshua Friedrich and Mark Sweet and Jack DiLullo and Sam Chu and Donald Plass James Dawson and Paul Muench and Larry Powell and Michael Floyd and Balaram Sinharoy and Mike Lee and Michael Goulet and James Wagoner and Nicole Schwartz and Steve Runyon and Gary Gorman and Phillip Restle Ronald Kalla and Joseph McGill and Steve Dodson},
+ title = {Design and implementation of the {POWER5} microprocessor},
+ booktitle = dac,
+ year = {2004},
+ pages = {670--672},
+ location = {San Diego, CA},
+ }
+
+@inproceedings{Ware:HPCA'10,
+ author = {Malcolm Ware and Karthick Rajamani and Michael Floyd and Bishop Brock and Juan C Rubio and Freeman Rawson and John B Carter},
+ title = {Architecting for power management: The {IBM POWER7} approach},
+ booktitle = hpca,
+ year = {2010},
+ location = {Bangalore, India},
+ }
+
