--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -213,6 +213,26 @@ month ={Nov.},
   OPTannote = 	 {}
 }
 
+@article{Kim:TVLSI'17,
+	title={Energy and lifetime optimizations for dark silicon manycore microprocessor considering both hard and soft errors},
+	author={Taeyoung Kim and Zeyu Sun and Hai-Bao Chen and Hai Wang and Sheldon X.-D. Tan},
+	journal=tvlsi,
+	volume={25},
+	number={9},
+	pages={2561--2574},
+	year={2017},
+	month={September}
+}
+
+@article{Kim:MEJ'18,
+	title={Dynamic reliability management based on resource-based {EM} modeling for multi-core microprocessors},
+	author={Taeyoung Kim and Zao Liu and Tan, Sheldon X.-D. Tan},
+	journal={Microelectronics Journal},
+	volume={74},
+	pages={106--115},
+	year={2018},
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % other publications
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
