--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -226,7 +226,7 @@ month ={Nov.},
 
 @article{Kim:MEJ'18,
 	title={Dynamic reliability management based on resource-based {EM} modeling for multi-core microprocessors},
-	author={Taeyoung Kim and Zao Liu and Tan, Sheldon X.-D. Tan},
+	author={Taeyoung Kim and Zao Liu and Sheldon X.-D. Tan},
 	journal={Microelectronics Journal},
 	volume={74},
 	pages={106--115},
