--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2680,3 +2680,23 @@ Year={1987}
  location = {Bangalore, India},
  }
 
+@article{Jaeger:Tutorial'02,
+  title={ {Tutorial on training recurrent neural networks, covering BPPT, RTRL, EKF and the echo state network approach}},
+  author={Herbert Jaeger},
+  year={2002},
+}
+
+@book{Shi:Report'10,
+  title={Dynamic Thermal Management Considering Accurate Temperature-Leakage Interdependency},
+  author={Bing Shi and Ankur Srivastava},
+  pages={43-67},
+  year={2010},
+}
+
+@inproceedings{Chaturvedi:CIT'10,
+  title={Leakage Aware Scheduling on Maximum Temperature Minimization for Periodic Hard Real-Time   Systems},
+  author={Vivek Chaturvedi and Huang Huang and Gang Quan},
+  booktitle={IEEE International Conference on Computer and Information Technology},
+  pages={1802-1809},
+  year={2010},
+}
