--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2700,3 +2700,19 @@ Year={1987}
   pages={1802-1809},
   year={2010},
 }
+
+@inproceedings{Quan:ECRTS'09,
+  title={{Leakage Aware Feasibility Analysis for Temperature-Constrained Hard Real-Time Periodic Tasks}},
+  author={Gang Quan and Yan Zhang},
+  booktitle={Euromicro Conference on Real-Time Systems},
+  pages={207-216},
+  year={2009},
+}
+
+@inproceedings{Rao:CASES'07,
+  title={Performance optimal processor throttling under thermal constraints},
+  author={Ravishankar Rao and Sarma Vrudhula},
+  booktitle={International Conference on Compilers, Architecture, and Synthesis for Embedded Systems},
+  pages={257-266},
+  year={2007},
+}
