--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2716,3 +2716,21 @@ Year={1987}
   pages={257-266},
   year={2007},
 }
+
+@article{Mohaqeqi:TOC'14,
+  title={{Analytical Leakage-Aware Thermal Modeling of a Real-Time System}},
+  author={Morteza Mohaqeqi and Mehdi Kargahi and Ali Movaghar},
+  journal=toc,
+  volume={63},
+  number={6},
+  pages={1378-1392},
+  year={2014},
+}
+
+@inproceedings{Su:ISLPED'03,
+  title={Full chip leakage-estimation considering power supply and temperature variations},
+  author={Haihua Su and Frank Liu and Anirudh Devgan and Emrah Acar and Sani Nassif},
+  booktitle={International Symposium on Low Power Electronics and Design},
+  pages={78-83},
+  year={2003},
+}
