--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2730,7 +2730,14 @@ Year={1987}
 @inproceedings{Su:ISLPED'03,
   title={Full chip leakage-estimation considering power supply and temperature variations},
   author={Haihua Su and Frank Liu and Anirudh Devgan and Emrah Acar and Sani Nassif},
-  booktitle={International Symposium on Low Power Electronics and Design},
+  booktitle=islped,
   pages={78-83},
   year={2003},
 }
+
+@article{Hennessy:Book'12,
+title={{Computer Architecture: A Quantitative Approach, Fifth Edition}},
+author={John L Hennessy and David A Patterson},
+Publisher={Elsevier},
+year={2012}}
+   
