--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2740,4 +2740,10 @@ title={{Computer Architecture: A Quantitative Approach, Fifth Edition}},
 author={John L Hennessy and David A Patterson},
 Publisher={Elsevier},
 year={2012}}
-   
+
+
+@article{Jaeger:Report'12,
+  title={ {Long short-term memory in echo state networks: Details of a simulation study}},
+  author={Herbert Jaeger},
+  year={2012},
+}   
