--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2743,7 +2743,7 @@ year={2012}}
 
 
 @article{Jaeger:Report'12,
-  title={ {Long short-term memory in echo state networks: Details of a simulation study}},
+  title={{Long Short-Term Memory in Echo State Networks: Details of a Simulation Study}},
   author={Herbert Jaeger},
   year={2012},
 }   
