--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2747,3 +2747,13 @@ year={2012}}
   author={Herbert Jaeger},
   year={2012},
 }   
+
+@article{Jaeger:NN'07,
+  title={Optimization and applications of echo state networks with leaky-integrator neurons},
+  author={Herbert Jaeger and Mantas Lukoševičius and Popovici Dan and Udo Siewert},
+  journal={Neural Networks},
+  volume={20},
+  number={3},
+  pages={335-352},
+  year={2007},
+}
