--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -48,11 +48,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 @ARTICLE{WangWan:TOC'18,
 	author = {Hai Wang and Jiachun Wan and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
 	journal = toc,
 	title = {A Fast Leakage-Aware Full-Chip Transient Thermal Estimation Method},
 	year = {2018},
+        month = {May},
+        volume = {67},
+        number = {5},
+        pages = {617--630},
 }
 
 
