--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2762,3 +2762,13 @@ year={2012}}
   pages={335-352},
   year={2007},
 }
+
+@article{Alessio:JPC'11,
+  title={Decentralized model predictive control of dynamically coupled linear systems},
+  author={Alessandro Alessio and Davide Barcelli and Alberto Bemporad},
+  journal={Journal of Process Control},
+  volume={21},
+  number={5},
+  pages={705-714},
+  year={2011},
+}
