--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2772,3 +2772,11 @@ year={2012}}
   pages={705-714},
   year={2011},
 }
+
+@inproceedings{Chen:SSC'17,
+  title={Modeling and Optimization of Complex Building Energy Systems with Deep Neural Networks},
+  pages={1-6},
+  year={2017},
+  author={Yize Chen and Yuanyuan Shi and Baosen Zhang},
+  booktitle={Asilomar Conference on Signals, Systems and Computers}   
+}
