--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2780,3 +2780,20 @@ year={2012}}
   author={Yize Chen and Yuanyuan Shi and Baosen Zhang},
   booktitle={Asilomar Conference on Signals, Systems and Computers}   
 }
+
+@article{Chakraborty:TII'17,
+  title={Intelligent Scheduling of Thermostatic Devices for Efficient Energy Management in Smart Grid},
+  author={Nilotpal Chakraborty and Arijit Mondal and Samrat Mondal},
+  journal={IEEE Transactions on Industrial Informatics},
+  number={6},
+  volume={13}, 
+  pages={2899-2910},
+  year={2017},
+}
+
+@article{Jindal:TII'18,
+  title={A Heuristic-based Smart HVAC Energy Management Scheme for University Buildings},
+  author={Anish Jindal and Neeraj Kumar and Joel J. P. C. Rodrigues},
+  journal={IEEE Transactions on Industrial Informatics},
+  year={2018},
+}
