--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2782,7 +2782,7 @@ year={2012}}
 }
 
 @article{Chakraborty:TII'17,
-  title={Intelligent Scheduling of Thermostatic Devices for Efficient Energy Management in Smart Grid},
+  title={{Intelligent Scheduling of Thermostatic Devices for Efficient Energy Management in Smart Grid}},
   author={Nilotpal Chakraborty and Arijit Mondal and Samrat Mondal},
   journal={IEEE Transactions on Industrial Informatics},
   number={6},
@@ -2792,7 +2792,7 @@ year={2012}}
 }
 
 @article{Jindal:TII'18,
-  title={A Heuristic-based Smart HVAC Energy Management Scheme for University Buildings},
+  title={{A Heuristic-based Smart HVAC Energy Management Scheme for University Buildings}},
   author={Anish Jindal and Neeraj Kumar and Joel J. P. C. Rodrigues},
   journal={IEEE Transactions on Industrial Informatics},
   year={2018},
