--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2686,7 +2686,7 @@ Year={1987}
  }
 
 @article{Jaeger:Tutorial'02,
-  title={ {Tutorial on training recurrent neural networks, covering BPPT, RTRL, EKF and the echo state network approach}},
+  title={Tutorial on training recurrent neural networks, covering {BPPT}, {RTRL}, {EKF} and the echo state network approach}},
   author={Herbert Jaeger},
   year={2002},
 }
@@ -2707,7 +2707,7 @@ Year={1987}
 }
 
 @inproceedings{Quan:ECRTS'09,
-  title={{Leakage Aware Feasibility Analysis for Temperature-Constrained Hard Real-Time Periodic Tasks}},
+  title={Leakage Aware Feasibility Analysis for Temperature-Constrained Hard Real-Time Periodic Tasks},
   author={Gang Quan and Yan Zhang},
   booktitle={Euromicro Conference on Real-Time Systems},
   pages={207-216},
@@ -2723,7 +2723,7 @@ Year={1987}
 }
 
 @article{Mohaqeqi:TOC'14,
-  title={{Analytical Leakage-Aware Thermal Modeling of a Real-Time System}},
+  title={Analytical Leakage-Aware Thermal Modeling of a Real-Time System},
   author={Morteza Mohaqeqi and Mehdi Kargahi and Ali Movaghar},
   journal=toc,
   volume={63},
@@ -2741,14 +2741,14 @@ Year={1987}
 }
 
 @article{Hennessy:Book'12,
-title={{Computer Architecture: A Quantitative Approach, Fifth Edition}},
+title={Computer Architecture: A Quantitative Approach, Fifth Edition},
 author={John L Hennessy and David A Patterson},
 Publisher={Elsevier},
 year={2012}}
 
 
 @article{Jaeger:Report'12,
-  title={{Long Short-Term Memory in Echo State Networks: Details of a Simulation Study}},
+  title={Long Short-Term Memory in Echo State Networks: Details of a Simulation Study},
   author={Herbert Jaeger},
   year={2012},
 }   
@@ -2782,7 +2782,7 @@ year={2012}}
 }
 
 @article{Chakraborty:TII'17,
-  title={{Intelligent Scheduling of Thermostatic Devices for Efficient Energy Management in Smart Grid}},
+  title={Intelligent Scheduling of Thermostatic Devices for Efficient Energy Management in Smart Grid},
   author={Nilotpal Chakraborty and Arijit Mondal and Samrat Mondal},
   journal={IEEE Transactions on Industrial Informatics},
   number={6},
@@ -2792,7 +2792,7 @@ year={2012}}
 }
 
 @article{Jindal:TII'18,
-  title={{A Heuristic-based Smart HVAC Energy Management Scheme for University Buildings}},
+  title={A Heuristic-based Smart {HVAC} Energy Management Scheme for University Buildings},
   author={Anish Jindal and Neeraj Kumar and Joel J. P. C. Rodrigues},
   journal={IEEE Transactions on Industrial Informatics},
   year={2018},
