--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2691,10 +2691,9 @@ Year={1987}
   year={2002},
 }
 
-@book{Shi:Report'10,
+@techreport{Shi:Report'10,
   title={Dynamic Thermal Management Considering Accurate Temperature-Leakage Interdependency},
   author={Bing Shi and Ankur Srivastava},
-  pages={43-67},
   year={2010},
 }
 
@@ -2740,11 +2739,12 @@ Year={1987}
   year={2003},
 }
 
-@article{Hennessy:Book'12,
+@Book{Hennessy:Book'12,
 title={Computer Architecture: A Quantitative Approach, Fifth Edition},
 author={John L Hennessy and David A Patterson},
 Publisher={Elsevier},
-year={2012}}
+year={2012}
+}
 
 
 @article{Jaeger:Report'12,
