--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2685,15 +2685,17 @@ Year={1987}
  location = {Bangalore, India},
  }
 
-@article{Jaeger:Tutorial'02,
-  title={Tutorial on training recurrent neural networks, covering {BPPT}, {RTRL}, {EKF} and the echo state network approach}},
+@techreport{Jaeger:Tutorial'02,
+  title={Tutorial on training recurrent neural networks, covering {BPPT}, {RTRL}, {EKF} and the echo state network approach},
   author={Herbert Jaeger},
+  Institution = {German National Research Center for Information Technology},
   year={2002},
 }
 
 @techreport{Shi:Report'10,
   title={Dynamic Thermal Management Considering Accurate Temperature-Leakage Interdependency},
   author={Bing Shi and Ankur Srivastava},
+  Institution = {The Institute for Systems Research},
   year={2010},
 }
 
