--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2799,3 +2799,112 @@ year={2012}
   journal={IEEE Transactions on Industrial Informatics},
   year={2018},
 }
+
+@article{Seo:TPDS'08,
+  title={Energy Efficient Scheduling of Real-Time Tasks on Multicore Processors},
+  author={Euiseong Seo and Jinkyu Jeong and Seonyeong Park and Joonwon Lee},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  year =    {2008},
+  volume =  {19},
+  number =  {11},
+  pages =   {1540-1552},
+  month =   {June},
+}
+
+@article{Majzoub:TCAD'10,
+  title={Energy Optimization for Many-Core Platforms: Communication and PVT Aware Voltage-Island Formation and Voltage Selection Algorithm},
+  author={Sohaib S. Majzoub and Resve A. Saleh and Steven J. E. Wilton and Rabab K. Ward},
+  journal=tcad,
+  year =    {2010},
+  volume =  {29},
+  number =  {5},
+  pages =   {816-829},
+  month =   {May},
+}
+
+@inproceedings{Ghasemazar:ISCAS'10,
+  title={Minimizing Energy consumption of a chip multiprocessor through simultaneous core consolidation},
+  pages={1-6},
+  year={2010},
+  author={Mohammad Ghasemazar and Ehsan Pakbaznia and Massoud Pedram},
+  booktitle = iscas,
+  pages = {49-52},
+}
+
+@inproceedings{Kong:DATE'11,
+ author = {Fanxin Kong and Wang Yi and Qingxu Deng},
+ title = {Energy-efficient scheduling of real-time tasks on cluster-based multicores},
+ booktitle = date,
+ year = {2011},
+ month = {March},
+ location = {Grenoble, France},
+ pages = {1-6}
+}
+
+@inproceedings{Cochran:ICCAD'11,
+  title={Identifying the optimal energy-efficient operating points of parallel workloads},
+  author={Ryan Cochran and Can Hankendi and Ayse Coskun and Sherief Reda},
+  booktitle=iccad,
+  pages={608-615},
+  year={2011},
+}
+
+@article{Lee:TVLSI'12,
+  title={Analyzing potential throughput improvement of power-and thermal-constrained multicore processors by exploiting DVFS and PCPG},
+  author={Jungseob Lee and Nam Sung Kim},
+  journal=tvlsi,
+  volume={20},
+  number={2},
+  pages={225-235},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{Pedram:TCAD'12,
+  title={Energy-efficient datacenters},
+  author={Massoud Pedram},
+  journal=tcad,
+  volume={31},
+  number={10},
+  pages={1465-1484},
+  year={2012},
+  publisher={IEEE}
+}
+
+@inproceedings{Annamalai:ISVLSI'14,
+  title={Reducing energy per instruction via dynamic resource allocation and voltage and frequency adaptation in asymmetric multicores},
+  author={Arunachalam Annamalai and Rance Rodrigues and Israel Koren and Sandip Kundu},
+  booktitle={VLSI (ISVLSI), 2014 IEEE Computer Society Annual Symposium on},
+  pages={436-441},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{Carroll:RTAS'14,
+  title={Unifying DVFS and offlining in mobile multicores},
+  author={Aaron Carroll and Gernot Heiser},
+  booktitle={Real-Time and Embedded Technology and Applications Symposium (RTAS), 2014 IEEE 20th},
+  pages={287-296},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{bhargav:ReConFig'15,
+  title={Accurate in-situ runtime measurement of energy per operation of system-on-chip on FPGA},
+  author={Siddharth S. Bhargav and Rishvanth K. Prabakar and Young H. Cho},
+  booktitle={ReConFigurable Computing and FPGAs (ReConFig), 2015 International Conference on},
+  pages={1-8},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{Gupta:TMSCS'18,
+  title={Dynamic power budgeting for mobile systems running graphics workloads},
+  author={Ujjwal Gupta and Raid Ayoub and Michael Kishinevsky and David Kadjo and Niranjan Soundararajan and Ugurkan Tursun and Umit Y Ogras},
+  journal={IEEE Transactions on Multi-Scale Computing Systems},
+  volume={4},
+  number={1},
+  pages={30-40},
+  year={2018},
+  publisher={IEEE}
+}
