--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2692,11 +2692,13 @@ Year={1987}
   year={2002},
 }
 
-@techreport{Shi:Report'10,
+@incollection{Shi:book'15,
   title={Dynamic Thermal Management Considering Accurate Temperature-Leakage Interdependency},
   author={Bing Shi and Ankur Srivastava},
-  Institution = {The Institute for Systems Research},
-  year={2010},
+  booktitle={ENCYCLOPEDIA OF THERMAL PACKAGING: Thermal Packaging Tools},
+  pages={39--60},
+  year={2015},
+  publisher={World Scientific}
 }
 
 @inproceedings{Chaturvedi:CIT'10,
@@ -2749,10 +2751,11 @@ year={2012}
 }
 
 
-@article{Jaeger:Report'12,
+@techreport{Jaeger:Report'12,
   title={Long Short-Term Memory in Echo State Networks: Details of a Simulation Study},
   author={Herbert Jaeger},
   year={2012},
+  institution={Jacobs University Bremen}
 }   
 
 @article{Jaeger:NN'07,
