--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2911,3 +2911,12 @@ year={2012}
   year={2018},
   publisher={IEEE}
 }
+
+@inproceedings{Kultursay:CHSCSS'12,
+  title={Performance enhancement under power constraints using heterogeneous CMOS-TFET multicores},
+  author={Emre Kultursay and Karthik Swaminathan and Vinay Saripalli and Vijaykrishnan Narayanan and Mahmut T Kandemir and Suman Datta},
+  booktitle={Proceedings of the eighth IEEE/ACM/IFIP international conference on Hardware/software codesign and system synthesis},
+  pages={245-254},
+  year={2012},
+  organization={ACM}
+}
