--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2920,3 +2920,12 @@ year={2012}
   year={2012},
   organization={ACM}
 }
+
+@inproceedings{Ghasemazar:ISCAS'10,
+  title={Minimizing energy consumption of a chip multiprocessor through simultaneous core consolidation and DVFS},
+  author={Mohammad Ghasemazar and Ehsan Pakbaznia and Massoud Pedram},
+  booktitle=iscas,
+  pages={49-52},
+  year={2010},
+  organization={IEEE}
+}
