--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2929,3 +2929,13 @@ year={2012}
   year={2010},
   organization={IEEE}
 }
+
+@article{Trischler:NN'16,
+  title={Synthesis of recurrent neural networks for dynamical system simulation},
+  author={Adam P Trischler and Gabriele MT {D'Eleuterio}},
+  journal={Neural Networks},
+  volume={80},
+  OPTnumber={},
+  pages={67-78},
+  year={2016},
+}
