--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2939,3 +2939,13 @@ year={2012}
   pages={67-78},
   year={2016},
 }
+
+@article{Bengio:TNN'94,
+  title={Learning Long-Term Dependencies with Gradient Descent is Difficult},
+  author={Yoshua Bengio and Patrice Simard and Paolo Frasconi},
+  journal={IEEE Transactions on Neural Networks},
+  volume={5},
+  number={2},
+  pages={157-166},
+  year={1994},
+}
