--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2705,7 +2705,7 @@ Year={1987}
   title={Leakage Aware Scheduling on Maximum Temperature Minimization for Periodic Hard Real-Time   Systems},
   author={Vivek Chaturvedi and Huang Huang and Gang Quan},
   booktitle={IEEE International Conference on Computer and Information Technology},
-  pages={1802-1809},
+  pages={1802--1809},
   year={2010},
 }
 
@@ -2713,7 +2713,7 @@ Year={1987}
   title={Leakage Aware Feasibility Analysis for Temperature-Constrained Hard Real-Time Periodic Tasks},
   author={Gang Quan and Yan Zhang},
   booktitle={Euromicro Conference on Real-Time Systems},
-  pages={207-216},
+  pages={207--216},
   year={2009},
 }
 
@@ -2721,7 +2721,7 @@ Year={1987}
   title={Performance optimal processor throttling under thermal constraints},
   author={Ravishankar Rao and Sarma Vrudhula},
   booktitle={International Conference on Compilers, Architecture, and Synthesis for Embedded Systems},
-  pages={257-266},
+  pages={257--266},
   year={2007},
 }
 
@@ -2731,7 +2731,7 @@ Year={1987}
   journal=toc,
   volume={63},
   number={6},
-  pages={1378-1392},
+  pages={1378--1392},
   year={2014},
 }
 
@@ -2739,7 +2739,7 @@ Year={1987}
   title={Full chip leakage-estimation considering power supply and temperature variations},
   author={Haihua Su and Frank Liu and Anirudh Devgan and Emrah Acar and Sani Nassif},
   booktitle=islped,
-  pages={78-83},
+  pages={78--83},
   year={2003},
 }
 
@@ -2764,7 +2764,7 @@ year={2012}
   journal={Neural Networks},
   volume={20},
   number={3},
-  pages={335-352},
+  pages={335--352},
   year={2007},
 }
 
@@ -2774,13 +2774,13 @@ year={2012}
   journal={Journal of Process Control},
   volume={21},
   number={5},
-  pages={705-714},
+  pages={705--714},
   year={2011},
 }
 
 @inproceedings{Chen:SSC'17,
   title={Modeling and Optimization of Complex Building Energy Systems with Deep Neural Networks},
-  pages={1-6},
+  pages={1--6},
   year={2017},
   author={Yize Chen and Yuanyuan Shi and Baosen Zhang},
   booktitle={Asilomar Conference on Signals, Systems and Computers}   
@@ -2792,7 +2792,7 @@ year={2012}
   journal={IEEE Transactions on Industrial Informatics},
   number={6},
   volume={13}, 
-  pages={2899-2910},
+  pages={2899--2910},
   year={2017},
 }
 
@@ -2810,7 +2810,7 @@ year={2012}
   year =    {2008},
   volume =  {19},
   number =  {11},
-  pages =   {1540-1552},
+  pages =   {1540--1552},
   month =   {June},
 }
 
@@ -2821,7 +2821,7 @@ year={2012}
   year =    {2010},
   volume =  {29},
   number =  {5},
-  pages =   {816-829},
+  pages =   {816--829},
   month =   {May},
 }
 
@@ -2831,7 +2831,7 @@ year={2012}
   year={2010},
   author={Mohammad Ghasemazar and Ehsan Pakbaznia and Massoud Pedram},
   booktitle = iscas,
-  pages = {49-52},
+  pages = {49--52},
 }
 
 @inproceedings{Kong:DATE'11,
@@ -2841,14 +2841,14 @@ year={2012}
  year = {2011},
  month = {March},
  location = {Grenoble, France},
- pages = {1-6}
+ pages = {1--6}
 }
 
 @inproceedings{Cochran:ICCAD'11,
   title={Identifying the optimal energy-efficient operating points of parallel workloads},
   author={Ryan Cochran and Can Hankendi and Ayse Coskun and Sherief Reda},
   booktitle=iccad,
-  pages={608-615},
+  pages={608--615},
   year={2011},
 }
 
@@ -2858,7 +2858,7 @@ year={2012}
   journal=tvlsi,
   volume={20},
   number={2},
-  pages={225-235},
+  pages={225--235},
   year={2012},
   publisher={IEEE}
 }
@@ -2869,7 +2869,7 @@ year={2012}
   journal=tcad,
   volume={31},
   number={10},
-  pages={1465-1484},
+  pages={1465--1484},
   year={2012},
   publisher={IEEE}
 }
@@ -2878,7 +2878,7 @@ year={2012}
   title={Reducing energy per instruction via dynamic resource allocation and voltage and frequency adaptation in asymmetric multicores},
   author={Arunachalam Annamalai and Rance Rodrigues and Israel Koren and Sandip Kundu},
   booktitle={VLSI (ISVLSI), 2014 IEEE Computer Society Annual Symposium on},
-  pages={436-441},
+  pages={436--441},
   year={2014},
   organization={IEEE}
 }
@@ -2887,7 +2887,7 @@ year={2012}
   title={Unifying DVFS and offlining in mobile multicores},
   author={Aaron Carroll and Gernot Heiser},
   booktitle={Real-Time and Embedded Technology and Applications Symposium (RTAS), 2014 IEEE 20th},
-  pages={287-296},
+  pages={287--296},
   year={2014},
   organization={IEEE}
 }
@@ -2896,7 +2896,7 @@ year={2012}
   title={Accurate in-situ runtime measurement of energy per operation of system-on-chip on FPGA},
   author={Siddharth S. Bhargav and Rishvanth K. Prabakar and Young H. Cho},
   booktitle={ReConFigurable Computing and FPGAs (ReConFig), 2015 International Conference on},
-  pages={1-8},
+  pages={1--8},
   year={2015},
   organization={IEEE}
 }
@@ -2907,7 +2907,7 @@ year={2012}
   journal={IEEE Transactions on Multi-Scale Computing Systems},
   volume={4},
   number={1},
-  pages={30-40},
+  pages={30--40},
   year={2018},
   publisher={IEEE}
 }
@@ -2916,7 +2916,7 @@ year={2012}
   title={Performance enhancement under power constraints using heterogeneous CMOS-TFET multicores},
   author={Emre Kultursay and Karthik Swaminathan and Vinay Saripalli and Vijaykrishnan Narayanan and Mahmut T Kandemir and Suman Datta},
   booktitle={Proceedings of the eighth IEEE/ACM/IFIP international conference on Hardware/software codesign and system synthesis},
-  pages={245-254},
+  pages={245--254},
   year={2012},
   organization={ACM}
 }
@@ -2925,7 +2925,7 @@ year={2012}
   title={Minimizing energy consumption of a chip multiprocessor through simultaneous core consolidation and DVFS},
   author={Mohammad Ghasemazar and Ehsan Pakbaznia and Massoud Pedram},
   booktitle=iscas,
-  pages={49-52},
+  pages={49--52},
   year={2010},
   organization={IEEE}
 }
@@ -2936,7 +2936,7 @@ year={2012}
   journal={Neural Networks},
   volume={80},
   OPTnumber={},
-  pages={67-78},
+  pages={67--78},
   year={2016},
 }
 
@@ -2946,6 +2946,26 @@ year={2012}
   journal={IEEE Transactions on Neural Networks},
   volume={5},
   number={2},
-  pages={157-166},
+  pages={157--166},
   year={1994},
+}
+
+@article{Hochreiter:NC'97,
+  title={Long Short-Term Memory},
+  author={Sepp Hochreiter and J\"{u}rgen Schmidhuber},
+  journal={Neural Computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+}
+
+@article{Gers:NC'00,
+  title={Learning to Forget: Continual Prediction with {LSTM}},
+  author={Felix A. Gers and J\"{u}rgen Schmidhuber and Fred Cummins},
+  journal={Neural Computation},
+  volume={12},
+  number={10},
+  pages={2451--2471},
+  year={2000},
 }
