--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2969,3 +2969,12 @@ year={2012}
   pages={2451--2471},
   year={2000},
 }
+
+@article{Zhou:TVLSI'18,
+  title={Thermal Stress and Reliability Analysis of {TSV}-Based {3-D} {IC}s With a Novel Adaptive Strategy Finite Element Method},
+  author={Hao Zhou and Hengliang Zhu and Tao Cui and David Z. Pan and Dian Zhou and Xuan Zeng},
+  journal=tvlsi,
+  pages={1-14},
+  year={2018},
+  organization={IEEE}
+}
