--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2978,3 +2978,25 @@ year={2012}
   year={2018},
   organization={IEEE}
 }
+
+@article{Athikulwongse:TCAD'13,
+  title={Impact of Mechanical Stress on the Full Chip Timing for Through-Silicon-Via-based {3-D} {IC}s},
+  author={Krit Athikulwongse and Jae-Seok Yang and David Z. Pan and Sung Kyu Lim},
+  journal=tcad,
+  volume={32},
+  number={6},
+  pages={905--917},
+  year={2013},
+  publisher={IEEE}  
+}
+
+@article{Liu:JS'18,
+  title={An Anisotropic Thermal-Stress Model for Through-Silicon Via},
+  author={Song Liu and Guangbao Shan},
+  journal={Journal of Semiconductors},
+  volume={39},
+  number={2},
+  pages={026003},
+  year={2018},
+  publisher={IOP Publishing}
+}
