--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3000,3 +3000,10 @@ year={2012}
   year={2018},
   publisher={IOP Publishing}
 }
+
+@book{Trivedi:PROB_BOOK'01,
+      author       = "Kishor S. Trivedi",
+      title        = "Probability and Statistics with Reliability, Queuing, and Computer Science Applications, 2nd Edition",
+      publisher    = "Wiley",
+      year         = "2001",
+}
