--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2974,7 +2974,7 @@ year={2012}
   title={Thermal Stress and Reliability Analysis of {TSV}-Based {3-D} {IC}s With a Novel Adaptive Strategy Finite Element Method},
   author={Hao Zhou and Hengliang Zhu and Tao Cui and David Z. Pan and Dian Zhou and Xuan Zeng},
   journal=tvlsi,
-  pages={1-14},
+  pages={1--14},
   year={2018},
   organization={IEEE}
 }
@@ -2996,7 +2996,6 @@ year={2012}
   journal={Journal of Semiconductors},
   volume={39},
   number={2},
-  pages={026003},
   year={2018},
   publisher={IOP Publishing}
 }
