--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2988,3 +2988,11 @@ year={2012}
       publisher    = "Wiley",
       year         = "2001",
 }
+
+@article{Pascanu:CoRR'12,
+  title={Understanding the exploding gradient problem},
+  author={Razvan Pascanu and Tomas Mikolov and Yoshua Bengio},
+  journal={CoRR},
+  year={2012},
+  volume={abs/1211.5063}
+}
