--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1134,7 +1134,7 @@ Year = {2010},
 
 @inproceedings{Wu:DAC'06,
   title={A systematic method for functional unit power estimation in microprocessors},
-  author={Wei Wu and Lingling Jin and Jim Yang and Pu Liu and Sheldon Tan},
+  author={Wei Wu and Lingling Jin and Jim Yang and Pu Liu and Sheldon X.-D. Tan},
   booktitle= dac,
   pages={554--557},
   month =  {June},
