--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2995,4 +2995,15 @@ year={2012}
   journal={CoRR},
   year={2012},
   volume={abs/1211.5063}
+}
+
+@Article{Henning:SIGARCH'06,
+	author =               {John L. Henning},
+	title =                {{SPEC CPU2006} benchmark descriptions},
+	journal =      {ACM SIGARCH Computer Architecture News},
+	volume={34},
+	number={4},
+	pages={1--17},
+	year={2006},
+	month={September}
 }
