--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3007,3 +3007,14 @@ year={2012}
 	year={2006},
 	month={September}
 }
+
+@ARTICLE{Long:TACO'08,
+	author = {Jieyi Long and Seda Ogrenci Memik and Gokhan Memik and Rajarshi Mukherjee},
+	journal = {ACM Transactions on Architecture and Code Optimization},
+	title = {Thermal monitoring mechanisms for chip multiprocessors},
+	year = {2008},
+        month = {August},
+        volume = {5},
+        number = {2},
+        pages = {9:1--9:33},
+}
