--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3018,3 +3018,13 @@ year={2012}
         number = {2},
         pages = {9:1--9:33},
 }
+
+@article{Dow:ESSL'11,
+  title={Highly selective {Cu} electrodeposition for filling through silicon holes},
+  author={Wei-Ping Dow and Chun-Weia Lu and Jing-Yuan Lin and Fu-Chiang Hsu},
+  journal={Electrochemical and Solid-State Letters},
+  volume={14},
+  number={6},
+  pages={63--67},
+  year={2011},
+}
