--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3028,3 +3028,32 @@ year={2012}
   pages={63--67},
   year={2011},
 }
+
+@article{AP:TCAD'17,
+  title={Optimal Greedy Algorithm for Many-Core Scheduling},
+  author={Anuj Pathania and Vanchinathan Venkatramani and  Muhammad Shafique and  Tulika Mitra and Jörg Henkel},
+  journal={IEEE Transactions On Computer-Aided Design Of Integrated Circuits And Systems},
+  volume={36},
+  number={6},
+  pages={1054-1058},
+  year={2017},
+  month={June},
+}
+
+@article{Anuj:DATE'17,
+   title={Scalable Probabilistic Power Budgeting for Many-Cores},
+   author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and Jörg Henkel},
+   journal={date},
+   year={2017},
+   month={March},
+   pages={864-869},
+}
+
+@article{Anuj:DAC'18,
+  title={QoS-Aware Stochastic Power Management for Many-Cores},
+  author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and Jörg Henkel},
+  journal={Design Automation Conference (DAC)},
+  year={2018},
+  month={June},
+}
+  
