--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3057,3 +3057,13 @@ year={2012}
   month={June},
 }
   
+@article{Heba:TC'17,
+   title={Power Density-Aware Resource Management for Heterogeneous Tiled Multicores},
+   author={ Heba Khdr and Santiago Pagani and Éricles Sousa and Vahid Lari and Anuj Pathania and Frank Hannig and Muhammad Shafique and Jürgen Teich and Jörg Henkel},
+   journal={IEEE Transactions On Computers}, 
+   volume={66},
+   number={3},
+   pages={488-501},
+   month={March},
+   year={2017},
+}
