--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3067,3 +3067,12 @@ year={2012}
    month={March},
    year={2017},
 }
+
+@article{Muha:DAC'14,
+  title={The EDA Challenges in the Dark Silicon Era (Temperature, Reliability, and Variability Perspectives)},
+  author={Muhammad Shafique and Siddharth Garg and Jörg Henkel and Diana Marculescu},
+  journal={Design Automation Conference (DAC)},
+  month={June},
+  year={2014},
+  }
+  
