--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2997,7 +2997,7 @@ year={2012}
   volume={abs/1211.5063}
 }
 
-@Article{Henning:SIGARCH'06,
+@article{Henning:SIGARCH'06,
 	author =               {John L. Henning},
 	title =                {{SPEC CPU2006} benchmark descriptions},
 	journal =      {ACM SIGARCH Computer Architecture News},
@@ -3008,7 +3008,7 @@ year={2012}
 	month={September}
 }
 
-@ARTICLE{Long:TACO'08,
+@article{Long:TACO'08,
 	author = {Jieyi Long and Seda Ogrenci Memik and Gokhan Memik and Rajarshi Mukherjee},
 	journal = {ACM Transactions on Architecture and Code Optimization},
 	title = {Thermal monitoring mechanisms for chip multiprocessors},
@@ -3027,4 +3027,26 @@ year={2012}
   number={6},
   pages={63--67},
   year={2011},
+}
+
+@article{Li:TCAD'18,
+	author = {Mengquan Li and Weichen Liu and Lei Yang and Peng Chen and Chao Chen},
+	journal = tcad,
+	title = {Chip Temperature Optimization for Dark Silicon Many-Core Systems},
+	year = {2018},
+        month = {May},
+        volume = {37},
+        number = {5},
+        pages = {941--953},
+}
+
+@article{Kanduri:TOC'18,
+	author = {Anil Kanduri and Mohammad-Hashem Haghbayan and Amir M. Rahmani and Muhammad Shafique and Axel Jantsch and Pasi Liljeberg},
+	journal = toc,
+	title = {{adBoost}: Thermal Aware Performance Boosting Through Dark Silicon Patterning},
+	year = {2018},
+        month = {August},
+        volume = {67},
+        number = {8},
+        pages = {1062--1077},
 }
