--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3051,50 +3051,45 @@ year={2012}
         pages = {1062--1077},
 }
 
-@article{AP:TCAD'17,
+@article{Pathania:TCAD'17,
   title={Optimal Greedy Algorithm for Many-Core Scheduling},
-  author={Anuj Pathania and Vanchinathan Venkatramani and  Muhammad Shafique and  Tulika Mitra and Jörg Henkel},
-  journal={IEEE Transactions On Computer-Aided Design Of Integrated Circuits And Systems},
+  author={Anuj Pathania and Vanchinathan Venkatramani and  Muhammad Shafique and  Tulika Mitra and J\"{o}rg Henkel},
+  journal=tcad,
   volume={36},
   number={6},
-  pages={1054-1058},
+  pages={1054--1058},
   year={2017},
   month={June},
 }
 
-@article{Anuj:DATE'17,
+@inproceedings{Pathania:DATE'17,
    title={Scalable Probabilistic Power Budgeting for Many-Cores},
-   author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and Jörg Henkel},
-   journal={date},
+   author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and J\"{o}rg Henkel},
+   booktitle=date,
    year={2017},
    month={March},
-   pages={864-869},
+   pages={864--869},
 }
 
-@article{Anuj:DAC'18,
+@inproceedings{Pathania:DAC'18,
   title={QoS-Aware Stochastic Power Management for Many-Cores},
-  author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and Jörg Henkel},
-  journal={Design Automation Conference (DAC)},
+  author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and J\"{o}rg Henkel},
+  booktitle=dac,
   year={2018},
   month={June},
+  location={San Francisco, CA},
 }
   
-@article{Heba:TC'17,
+@article{Khdr:ToC'17,
    title={Power Density-Aware Resource Management for Heterogeneous Tiled Multicores},
-   author={ Heba Khdr and Santiago Pagani and Éricles Sousa and Vahid Lari and Anuj Pathania and Frank Hannig and Muhammad Shafique and Jürgen Teich and Jörg Henkel},
-   journal={IEEE Transactions On Computers}, 
+   author={ Heba Khdr and Santiago Pagani and \'{E}ricles Sousa and Vahid Lari and Anuj Pathania and Frank Hannig and Muhammad Shafique and J\"{u}rgen Teich and J\"{o}rg Henkel},
+   journal=toc,
    volume={66},
    number={3},
-   pages={488-501},
+   pages={488--501},
    month={March},
    year={2017},
 }
 
-@article{Muha:DAC'14,
-  title={The EDA Challenges in the Dark Silicon Era (Temperature, Reliability, and Variability Perspectives)},
-  author={Muhammad Shafique and Siddharth Garg and Jörg Henkel and Diana Marculescu},
-  journal={Design Automation Conference (DAC)},
-  month={June},
-  year={2014},
-  }
+
   
