--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3091,5 +3091,15 @@ year={2012}
    year={2017},
 }
 
+@article{LeCun:NC'89,
+  title={Backpropagation Applied to Handwritten Zip Code Recognition},
+  author={Yann LeCun and Bernhard E. Boser and John S. Denker and Donnie Henderson and Richard E. Howard and Wayne E. Hubbard and Lawrence D. Jackel},
+  journal={Neural Computation},
+  volume={1},
+  number={4},
+  pages={541--551},
+  year={1989},
+  publisher={MIT Press}
+}
 
   
