--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3102,4 +3102,13 @@ year={2012}
   publisher={MIT Press}
 }
 
-  
+@article{Reda:SJ'18,
+  title={Blind Identification of Thermal Models and Power Sources From Thermal Measurements},
+  author={Sherief Reda and Kapil Dev and Adel Belouchrani},
+  journal={Sensors Journal},
+  volume={18},
+  number={2},
+  pages={680--691},
+  year={2018},
+  month = {January},
+}  
