--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3105,7 +3105,7 @@ year={2012}
 @article{Reda:SJ'18,
   title={Blind Identification of Thermal Models and Power Sources From Thermal Measurements},
   author={Sherief Reda and Kapil Dev and Adel Belouchrani},
-  journal={Sensors Journal},
+  journal={IEEE Sensors Journal},
   volume={18},
   number={2},
   pages={680--691},
