--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3112,3 +3112,11 @@ year={2012}
   year={2018},
   month = {January},
 }  
+
+@inproceedings{Goodfellow:ICML'13,
+	title={Maxout networks},
+	author={Ian J. Goodfellow and David Warde-Farley and Mehdi Mirza and Aaron Courville and Yoshua Bengio},
+	booktitle={Proceedings of the International Conference on Machine Learning (ICML)},
+	pages={1319--1327},
+	year={2013},
+}
