--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3120,3 +3120,9 @@ year={2012}
 	pages={1319--1327},
 	year={2013},
 }
+
+@misc{Chen:ARXIV'15,
+   title={Mxnet: A flexible and efficient machine learning library for heterogeneous distributed systems},
+   author={Tianqi Chen and Mu Li and Yutian Li and Min Lin and Naiyan Wang and Minjie Wang and Tianjun Xiao and Bing Xu and Chiyuan Zhang and Zheng Zhang},
+   note = {arXiv:1512.01274, 2015},
+}
