--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3126,3 +3126,12 @@ year={2012}
    author={Tianqi Chen and Mu Li and Yutian Li and Min Lin and Naiyan Wang and Minjie Wang and Tianjun Xiao and Bing Xu and Chiyuan Zhang and Zheng Zhang},
    note = {arXiv:1512.01274, 2015},
 }
+
+@article{Pedregosa:JMLR'11,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Fabian Pedregosa and Ga\"{e}I Varoquaux and Alexandre Gramfort and Vincent Michel and Bertrand Thirion and Olivier Grisel and Mathieu Blondel and Peter Prettenhofer and Ron Weiss and Vincent Dubourg and Jake Vanderplas and Alexandre Passos and David Cournapeau},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
